<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wolPi</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_add_new_host">Add new Host</string>
    <string name="welcome">wolPi startup finished.</string>
    <string name="start_button">Execute WOL!</string>
    <string name="title_host_list">Available Hosts</string>
    <string name="title_host_management">Edit Host</string>
    <string name="save_button">Save</string>
    <string name="preference_host">[host]</string>
    <string name="preference_port">[port]</string>
    <string name="preference_ssh_password">[password]</string>
    <string name="preference_ssh_user">[user]</string>
    <string name="preference_wol_mac">[target mac address]</string>
    <string name="preference_wol_broadcast_ip">[remote broadcast IP (optional)]</string>
    <string name="dialog_host_edit">Edit</string>
    <string name="dialog_host_delete">Delete</string>
    

</resources>